--- a/src/app/main/self/self.component.html
+++ b/src/app/main/self/self.component.html
@@ -6,7 +6,7 @@
     </div>
     <div id="hLD">
     <span *ngIf="!headline" class="card-text" class="selfHeadline">What are you thinking?</span>
-    <span *ngIf="headline" class="selfHeadline" >{{headline}}</span>
+    <span *ngIf="headline" class="selfHeadline" id="selfHeadline">{{headline}}</span>
     </div>
   </div>
 
