--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
             <a class="nav-link" href="#/profile">profile <i class="far fa-user"></i><span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#/landing" (click)="logout()">logout <i class="fas fa-sign-out-alt"></i><span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#/landing" (click)="logout()" id="logout">logout <i class="fas fa-sign-out-alt"></i><span class="sr-only">(current)</span></a>
           </li>
         </ul>
 
