add the author's avatar of a post

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,12 +1,14 @@
 <app-nav></app-nav>
-<div class="container">
+<div class="container" id="main-container">
+
   <div class=' row col-12'>
+    <div class='part-container col-sm-8'>
+      <app-posts [followers]='followings' [length]='followings.length' [accountName]='username'></app-posts>
+    </div>
+
     <div class='part-container col-sm-4'>
       <app-self></app-self>
       <app-following [followers]='followings' [currentUser]='username' (add)='addFriend($event)' (delete)='removeFriend($event)'></app-following>
-    </div>
-    <div class='part-container col-sm-8'>
-      <app-posts [followers]='followings' [length]='followings.length' [accountName]='username'></app-posts>
     </div>
   </div>
 </div>
