--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,21 +1,25 @@
 
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #ffffff;">
     <div class="container">
-        <ul class="navbar-nav mr-auto" id="icon">
-          <li class="nav-item active">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active" id="icon">
             <a class="nav-link" href="/#/main"><i class="fab fa-tripadvisor"></i>  Ricebook</a>
           </li>
         </ul>
 
         <ul class="navbar-nav mr-auto">
+
         </ul>
 
         <ul class="my-2 my-lg-0 navbar-nav" id="function">
           <li class="nav-item active">
-            <a class="nav-link" href="#/profile">profile <i class="far fa-user"></i><span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/#/main">Home <i class="fas fa-home"></i><span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#/landing" (click)="logout()" id="logout">logout <i class="fas fa-sign-out-alt"></i><span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#/profile">Profile <i class="far fa-user"></i><span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#/landing" (click)="logout()" id="logout">Logout <i class="fas fa-sign-out-alt"></i><span class="sr-only">(current)</span></a>
           </li>
         </ul>
 
