add the function of adding comment

--- a/src/app/main/posts/posts.component.html
+++ b/src/app/main/posts/posts.component.html
@@ -83,8 +83,8 @@
           </div>
           <div class="sH9wk">
             <form id="commentArea">
-              <textarea aria-label="Add a comment…" placeholder="Add a comment…" class="Ypffh" autocomplete="off" autocorrect="off" style="height: 18px;"></textarea>
-              <button type="submit" class="commentBtn"><i class="far fa-comment-alt"></i></button>
+              <textarea aria-label="Add a comment…" name="commentArea" [(ngModel)]="post.newComment" placeholder="Add a comment…" class="Ypffh" autocomplete="off" autocorrect="off" style="height: 18px;"></textarea>
+              <button type="submit" class="commentBtn" (click)="comment(post.newComment, post._id)"><i class="far fa-comment-alt"></i></button>
             </form>
           </div>
         </div>
