--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -10,11 +10,11 @@
           </div>
           <div class="input-group mb-3">
             <div class="custom-file">
-              <input type="file" class="custom-file-input" id="inputGroupFile02">
-              <label class="custom-file-label" for="inputGroupFile02" aria-describedby="inputGroupFileAddon02">Choose file</label>
+              <input type="file" class="custom-file-input" id="inputGroupFile02" accept="image/*" (change)="handleImageChange($event)">
+              <label class="custom-file-label" for="inputGroupFile02" aria-describedby="inputGroupFileAddon02" id="fileName">Choose file</label>
             </div>
             <div class="input-group-append">
-              <span class="input-group-text" id="inputGroupFileAddon02">Upload</span>
+              <span class="input-group-text" id="inputGroupFileAddon02" (click)="updateImage()">Upload</span>
             </div>
           </div>
           <ul class="list-group">
