add the function of logging in by github

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -21,6 +21,7 @@
         </div>
       </div>
       <button type="submit" class="btn btn-primary" id='loginBtn'>Log in</button>
+      <a href="http://localhost:3000/login/github" class="btn btn-default">Github</a>
       <div *ngIf="isSubmit">
         <div *ngIf="isLogin !== undefined">
             <div *ngIf="!isLogin" class="alert alert-danger" id="login-error">
