add the function of display more posts with scrolling down the page

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,7 +3,7 @@
 
   <div class=' row col-12'>
     <div class='part-container col-sm-8'>
-      <app-posts [followers]='followings' [length]='followings.length' [accountName]='username'></app-posts>
+      <app-posts [followers]='followings'></app-posts>
     </div>
 
     <div class='part-container col-sm-4'>
