change the display style of date

--- a/src/app/main/following/following.component.css
+++ b/src/app/main/following/following.component.css
@@ -21,13 +21,19 @@
   margin-top: 30px;
 }
 
+form {
+  text-align: center;
+}
+
 input {
-  margin-left: 40px;
-  margin-right: 5px;
+  margin-left: 10px;
 }
 
 #addingRes {
   text-align: center;
-  margin-left:50px;
-  width: 260px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+
+
